Fixed alignment on skills. Working on the role tab and adjusting CSS to style the role tab, re-using from the skills tab.

--- a/less/actor-sheet.less
+++ b/less/actor-sheet.less
@@ -82,6 +82,17 @@ app.window-app.sheet.actor {
     padding         : 0 3px;
     font-size       : 0.8em;
     background-color: @white;
+    .skill-name {
+      width: 60%;
+    }
+    .skill-level,
+    .skill-base {
+      width: 10%;
+      text-align: center;
+    }
+  }
+
+  .border-red {
     border          : solid @maximum-red 1px;
   }
 
